GNOME Bugzilla – Bug 657917
gnome-settings-daemon crashed with SIGSEGV in g_closure_invoke()
Last modified: 2011-09-08 10:45:48 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/836014 crashing at every login ".
+ Trace 228306
Thread 1 (Thread 0x7f2a509ca940 (LWP 1869))
Again, not matching the sources for 3.1.5: http://git.gnome.org/browse/gnome-settings-daemon/tree/plugins/power/gsd-power-manager.c?id=a9756f7e5ef5777fbdca302919bfbeb35e76f6b3#n2686
Pedro, does this happen with gnome-settings-daemon 3.1.90 or 3.1.91?
Richard, last dupe we have is on 3.1.91 we are asking for a complete backtrace on that version and we'll be posting that here. Thanks!.
The backtrace with 3.1.91: GNU gdb (Ubuntu/Linaro 7.3-0ubuntu2) 7.3-2011.08 Copyright (C) 2011 Free Software Foundation, Inc. License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html> This is free software: you are free to change and redistribute it. There is NO WARRANTY, to the extent permitted by law. Type "show copying" and "show warranty" for details. This GDB was configured as "x86_64-linux-gnu". For bug reporting instructions, please see: <http://bugs.launchpad.net/gdb-linaro/>... Reading symbols from /usr/bin/gnome-settings-daemon...(no debugging symbols found)...done. (gdb) handle SIG33 pass nostop noprint Signal Stop Print Pass to program Description SIG33 No No Yes Real-time event 33 (gdb) set pagination 0 (gdb) run Starting program: /usr/bin/gnome-settings-daemon [Thread debugging using libthread_db enabled] [New Thread 0x7fffeead3700 (LWP 6806)] [New Thread 0x7fffee2d2700 (LWP 6807)] ** (gnome-settings-daemon:6801): WARNING **: Ignoring unknown module 'org.gnome.settings-daemon.plugins.ubuntuone' [New Thread 0x7fffed8c8700 (LWP 6808)] [New Thread 0x7fffed0c7700 (LWP 6809)] (gnome-settings-daemon:6801): power-plugin-WARNING **: not connected [New Thread 0x7fffe7fff700 (LWP 6810)] [New Thread 0x7fffe77fe700 (LWP 6811)] [New Thread 0x7fffe6ffd700 (LWP 6812)] [New Thread 0x7fffe67fc700 (LWP 6813)] [Thread 0x7fffe67fc700 (LWP 6813) exited] [Thread 0x7fffe6ffd700 (LWP 6812) exited] [Thread 0x7fffeead3700 (LWP 6806) exited] [Thread 0x7fffe77fe700 (LWP 6811) exited] [Thread 0x7fffee2d2700 (LWP 6807) exited] warning: the debug information found in "/usr/lib/debug//usr/lib/libxml2.so.2.7.8" does not match "/usr/lib/libxml2.so.2" (CRC mismatch). warning: the debug information found in "/usr/lib/debug/usr/lib/libxml2.so.2.7.8" does not match "/usr/lib/libxml2.so.2" (CRC mismatch). (gnome-settings-daemon:6801): GLib-GIO-CRITICAL **: g_dbus_proxy_call_sync_internal: assertion `G_IS_DBUS_PROXY (proxy)' failed Program received signal SIGSEGV, Segmentation fault. idle_is_session_inhibited (manager=<optimized out>, mask=<optimized out>) at gsd-power-manager.c:2744 2744 gsd-power-manager.c: No such file or directory. in gsd-power-manager.c (gdb) backtrace full
+ Trace 228376
commit e66f59aae897cbdaae7eee4220225f11ac1e8524 Author: Richard Hughes <richard@hughsie.com> Date: Thu Sep 8 11:44:22 2011 +0100 power: Don't crash if we try to calculate the idle state before connected to gnome-session Resolves https://bugzilla.gnome.org/show_bug.cgi?id=657917