power: Don't crash if we try to calculate the idle state before connected to gnome-session

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=657917